--- a/styles/info.css
+++ b/styles/info.css
@@ -11,7 +11,7 @@ main {
     width: 85%;
     margin: 0 auto;
     margin-bottom: 50px;
-    padding: 0 50px;
+    padding-bottom: 50px;
 }
 
 h1 {
@@ -118,7 +118,7 @@ h1 {
 
 @media screen and (max-width: 1200px) {
     main {
-        padding: 0 10px;
+        padding-bottom: 20px;
     }
 
     .heading {
